--- a/snowfall.json
+++ b/snowfall.json
@@ -3,7 +3,7 @@
 		"2.0": {
 			"current": "2.0.3",
 			"download": "https://github.com/chris1278/snowfall",
-			"announcement": "https://www.phpbb.de/community/viewtopic.php?f=149&p=1387722#p1387722",
+			"announcement": "https://www.phpbb.de/community/viewtopic.php?t=245907",
 			"eol": null,
 			"security": false
 		}
